fixed overflow issue on music page

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,9 @@
 }
 
 .musicHolder {
-  @apply  sm:flex gap-4 p-4 justify-center items-center;
+  @apply sm:flex gap-4 p-4 justify-center items-center;
+}
+
+.musicLink {
+  @apply mt-2;
 }
